# walrus_rs

./: .gitignore  Cargo.toml  README.md  README_zh-CN.md
examples/: blocking_usage.rs  simple_usage.rs
src/: blocking_client.rs  client.rs  error.rs  lib.rs  models.rs
tests/: integration_tests.rs
